# Cuda-Stitch

./: README.md  index.html
code/: .gitignore  Brief.cpp  Brief.hpp  CMakeCache.txt  CMakeLists.txt  CUDA-STITCH  CUDA-Stitch  FastHessian.cpp  FastHessian.hpp  GeneratePatchDistribution.py  Integral.cu  InterestPoint.cpp  InterestPoint.hpp  InterestPoint.hpp.gch  Makefile  ResponseLayer.hpp  ResponseMapGpuGenerator.cu  ResponseMapGpuGenerator.cu_incl  Timer.cpp  Timer.hpp  a.out  main.c  main.cpp  makeTemp.sh  out.txt
code_ghc/: CMakeCache.txt  CUDA-STITCH  cmake_install.cmake  main.cpp
doc/html/: FastHessian_8hpp_source.html  InterestPoint_8hpp_source.html  annotated.html  classFastHessian.html  classInterestPoint.html  classes.html  files.html  index.html
doc/html/search/: all_66.js  all_69.js  search.js
doc/latex/: annotated.tex  classFastHessian.tex  classInterestPoint.tex  refman.tex
etc/: bashrc  buildOptions.txt  makeTemp.sh  sam_gitignore
